feat : Ai microservice added