@@ -21,54 +21,37 @@ public class ResumeService {
     private final PdfParsingService pdfParsingService;
     private final ResumeEventProducer eventProducer;
 
-    public ResumeService(ResumeRepository resumeRepository,
-                         ResumeAnalysisRepository analysisRepository,
-                         PdfParsingService pdfParsingService,
-                         ResumeEventProducer eventProducer) {
+    public ResumeService(ResumeRepository resumeRepository, ResumeAnalysisRepository analysisRepository, PdfParsingService pdfParsingService, ResumeEventProducer eventProducer) {
         this.resumeRepository = resumeRepository;
         this.analysisRepository = analysisRepository;
         this.pdfParsingService = pdfParsingService;
         this.eventProducer = eventProducer;
     }
 
-    // ─────────────────────────────────────────
-    // UPLOAD RESUME
-    // 1. Validate it's a PDF
-    // 2. Extract text with PDFBox
-    // 3. Save to DB
-    // 4. Fire Kafka event
-    // ─────────────────────────────────────────
-    public ResumeUploadResponse uploadResume(
-            MultipartFile file, String userEmail) throws Exception {
+    public ResumeUploadResponse uploadResume(MultipartFile file, String userEmail) throws Exception {
 
-        // Validate file type
         if (file.isEmpty()) {
             throw new RuntimeException("Please upload a file");
         }
 
         String originalFilename = file.getOriginalFilename();
-        if (originalFilename == null ||
-                !originalFilename.toLowerCase().endsWith(".pdf")) {
+        if (originalFilename == null || !originalFilename.toLowerCase().endsWith(".pdf")) {
             throw new RuntimeException("Only PDF files are accepted");
         }
 
-        // Extract text from PDF using PDFBox
         String extractedText = pdfParsingService.extractTextFromPdf(file);
-
         if (extractedText == null || extractedText.trim().isEmpty()) {
             throw new RuntimeException(
                     "Could not extract text from PDF. " +
                             "Please ensure the PDF is not scanned/image-only.");
         }
 
-        // Save resume to database
         Resume resume = new Resume();
         resume.setUserEmail(userEmail);
         resume.setFileName(originalFilename);
         resume.setExtractedText(extractedText);
         Resume savedResume = resumeRepository.save(resume);
 
-        // Fire Kafka event — analysis will happen asynchronously
         eventProducer.sendResumeUploadedEvent(savedResume.getId());
 
         return new ResumeUploadResponse(
@@ -79,28 +62,18 @@ public class ResumeService {
         );
     }
 
-    // ─────────────────────────────────────────
-    // GET ANALYSIS RESULTS
-    // ─────────────────────────────────────────
     public AnalysisResponse getAnalysis(Long resumeId) {
-        Resume resume = resumeRepository.findById(resumeId)
-                .orElseThrow(() ->
-                        new RuntimeException("Resume not found: " + resumeId));
+        Resume resume = resumeRepository.findById(resumeId).orElseThrow(() -> new RuntimeException("Resume not found: " + resumeId));
 
         ResumeAnalysis analysis = analysisRepository
                 .findByResumeId(resumeId)
-                .orElseThrow(() ->
-                        new RuntimeException(
-                                "Analysis not ready yet for resumeId: "
-                                        + resumeId));
+                .orElseThrow(() -> new RuntimeException("Analysis not ready yet for resumeId: " + resumeId));
 
         List<String> extractedSkills = analysis.getExtractedSkills() != null
-                ? Arrays.asList(analysis.getExtractedSkills().split(","))
-                : List.of();
+                ? Arrays.asList(analysis.getExtractedSkills().split(",")) : List.of();
 
         List<String> missingSkills = analysis.getMissingSkills() != null
-                ? Arrays.asList(analysis.getMissingSkills().split(","))
-                : List.of();
+                ? Arrays.asList(analysis.getMissingSkills().split(",")) : List.of();
 
         return new AnalysisResponse(
                 resume.getId(),
